<resources>
    <string name="app_name">Online</string>
    <string name="enter_account">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="remember_password"> 记住密码</string>
    <string name="auto_login"> 自动登录</string>

    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="choice_car">选车</string>
    <string name="monitor">监控</string>
    <string name="monitor_page">监控页面</string>
    <string name="car_list">车辆列表</string>
    <string name="warn">报警</string>
    <string name="setting">设置</string>
    <string name="car_monitor">车辆监控</string>
    <string name="map">地图</string>
    <string name="satellite">卫星</string>
    <string name="warn_information">报警信息</string>
    <string name="setup">设定</string>
    <string name="enter_name_or_car_no">请输入名称或车牌号</string>
    <string name="search">搜索</string>
    <string name="exit_account">退出账号</string>
    <string name="set_flush_time">设置刷新时间</string>
    <string name="set_main_page">设置登陆主页</string>
    <string name="opinion">意见反馈</string>
    <string name="instructions">使用说明</string>
    <string name="about">关于</string>
    <string name="car_choice">车辆选择</string>
    <string name="receive_warn">接收我关注的车辆报警</string>
    <string name="not_receive">不接收车辆报警</string>
    <string name="submit">提交</string>
    <string name="hint_opinion">请留下您宝贵的意见......</string>
    <string name="enclosure_info_cycle">拖动地图调整围栏中心，拖动进度条控制围栏范围大小</string>
    <string name="enclosure_info_polygon">单击添加选点，三个及以上选点构成围栏区域。</string>
    <string name="set_enclosure">设置围栏</string>
    <string name="reset_enclosure">重置围栏</string>
    <string name="stop_time">停留时间：</string>
    <string name="start">起：</string>
    <string name="end">止：</string>
    <string name="address">位置：</string>
    <string name="get_station">获取基站</string>
    <string name="choice_map">选择地图</string>
    <string name="map_gaode">高德地图</string>
    <string name="map_baidu">百度地图</string>
</resources>
