<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_layout_enclosure_bottom_polygon"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:visibility="visible">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center_horizontal"
        android:text="@string/enclosure_info_polygon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_layout_enclosure_bottom_polygon_reset"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/reset_enclosure"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_layout_enclosure_bottom_polygon_set"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/set_enclosure"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
</LinearLayout>