<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/dp_256"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/colorNull"
              android:paddingBottom="@dimen/dp_12">

    <LinearLayout
        android:layout_width="@dimen/dp_256"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/dp_4">

        <ImageView
            android:id="@+id/iv_view_info_window_path_close"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_gravity="end"
            android:padding="@dimen/dp_8"
            android:src="@drawable/ic_delete"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_time"/>

            <TextView
                android:id="@+id/tv_view_info_window_path_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreen"
                android:text="@string/start"/>

            <TextView
                android:id="@+id/tv_view_info_window_path_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorOrange"
                android:text="@string/end"/>

            <TextView
                android:id="@+id/tv_view_info_window_path_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/tv_view_info_window_path_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_12"
        android:src="@drawable/ic_info_part"/>

</LinearLayout>