<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tianyigps.online.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_160"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/bg_login_shadow"
        android:padding="@dimen/dp_16">

        <LinearLayout
            android:id="@+id/ll_activity_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:orientation="horizontal"
            android:padding="@dimen/dp_4">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:padding="@dimen/dp_2"
                android:src="@drawable/ic_account"/>

            <ImageView
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:src="@color/colorBlueTheme"/>

            <EditText
                android:id="@+id/et_activity_login_account"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_24"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/enter_account"
                android:textSize="@dimen/sp_14"
                />

            <ImageView
                android:id="@+id/iv_activity_login_pull"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:padding="@dimen/dp_2"
                android:src="@drawable/ic_pull"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_activity_login_account"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_edit"
            android:orientation="horizontal"
            android:padding="@dimen/dp_4">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:padding="@dimen/dp_2"
                android:src="@drawable/ic_password"/>

            <ImageView
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:src="@color/colorBlueTheme"/>

            <EditText
                android:id="@+id/et_activity_login_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_24"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_activity_login_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@id/ll_activity_login_password"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"/>

        <CheckBox
            android:id="@+id/cb_activity_login_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_activity_login_login"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/remember_password"
            android:textColor="@color/colorWhite"/>

        <CheckBox
            android:id="@+id/cb_activity_login_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/cb_activity_login_remember_password"
            android:text="@string/auto_login"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

</RelativeLayout>
