<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_2">

        <LinearLayout
            android:id="@+id/ll_content_bottom_choice_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_content_bottom_choice_car"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:padding="@dimen/dp_4"
                android:src="@drawable/ic_choice_car_gray"/>

            <TextView
                android:id="@+id/tv_content_bottom_choice_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_car"
                android:textColor="@color/colorBlackText"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_content_bottom_monitor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_content_bottom_monitor"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:padding="@dimen/dp_4"
                android:src="@drawable/ic_monitor_gray"/>

            <TextView
                android:id="@+id/tv_content_bottom_monitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitor"
                android:textColor="@color/colorBlackText"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_content_bottom_warn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_content_bottom_warn"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:padding="@dimen/dp_4"
                android:src="@drawable/ic_warn_gray"/>

            <TextView
                android:id="@+id/tv_content_bottom_warn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn"
                android:textColor="@color/colorBlackText"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_content_bottom_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_content_bottom_setting"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:padding="@dimen/dp_4"
                android:src="@drawable/ic_setting_gray"/>

            <TextView
                android:id="@+id/tv_content_bottom_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@color/colorBlackText"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_layout_content_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:visibility="gone"
        android:background="@color/colorGrayAlpha"/>

</FrameLayout>