<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tianyigps.online.activity.PathActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueTheme"
        android:padding="@dimen/dp_2">

        <ImageView
            android:id="@+id/iv_activity_path_1"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/tv_activity_path_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_18"/>

        <ImageView
            android:id="@+id/iv_activity_path_2"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_2"
            android:layout_marginRight="@dimen/dp_2"
            android:layout_toLeftOf="@+id/iv_activity_path_3"
            android:layout_toStartOf="@+id/iv_activity_path_3"
            android:padding="@dimen/dp_4"
            android:src="@drawable/bg_speed"/>

        <ImageView
            android:id="@+id/iv_activity_path_3"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_4"
            android:src="@drawable/bg_date"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBlueTheme"
        android:layout_weight="1">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/mv_activity_path"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_activity_path_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_activity_path_satellite"
                android:layout_marginEnd="@dimen/dp_1"
                android:layout_marginRight="@dimen/dp_1"
                android:layout_toLeftOf="@+id/tv_activity_path_satellite"
                android:layout_toStartOf="@+id/tv_activity_path_satellite"
                android:background="@drawable/bg_map_control_select"
                android:text="@string/map"/>

            <TextView
                android:id="@+id/tv_activity_path_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_map_control"
                android:text="@string/satellite"/>
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>
